--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,9 +76,9 @@ jobs:
           echo "正在克隆源码仓库..."
           repo init -u https://github.com/HanKuCha/kernel_manifest.git -b refs/heads/oneplus/sm8750 -m JiuGeFaCai_oneplus_13_v.xml --depth=1
           repo sync -c -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
-          echo "正在去除 ABI 保护 & 去除 dirty 后缀..."
-          rm common/android/abi_gki_protected_exports_* || true
-          for f in common/scripts/setlocalversion; do
+          #echo "正在去除 ABI 保护 & 去除 dirty 后缀..."
+          #rm common/android/abi_gki_protected_exports_* || true
+          #for f in common/scripts/setlocalversion; do
             sed -i 's/ -dirty//g' "$f"
             sed -i '$i res=$(echo "$res" | sed '\''s/-dirty//g'\'')' "$f"
           done
