--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,9 +77,9 @@ jobs:
           repo init -u https://github.com/HanKuCha/kernel_manifest.git -b refs/heads/oneplus/sm8750 -m JiuGeFaCai_oneplus_13_v.xml --depth=1
           repo sync -c -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
           echo "正在去除 ABI 保护 & 去除 dirty 后缀..."
-          rm common/android/abi_gki_protected_exports_* || true
-          # find . -name abi_gki_protected_exports_*
           cd kernel_platform
+          rm common/android/abi_gki_protected_exports_* || echo "无需去除"
+          # find . -name abi_gki_protected_exports_*
           for f in common/scripts/setlocalversion; do
             sed -i 's/ -dirty//g' "$f"
             sed -i '$i res=$(echo "$res" | sed '\''s/-dirty//g'\'')' "$f"
