--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -230,7 +230,12 @@ jobs:
           else
             zip -r ../AnyKernel3_SukiSU_${{ env.KSUVER }}_${{ env.KERNEL_VERSION }}_A15_${{ env.KERNEL_NAME }}.zip ./*
           fi
-          cp *.zip ${{ github.workspace }}/kernel_workspace || echo "cp失败"
+          for i in *.zip; do
+            cp $i ${{ github.workspace }}/kernel_workspace || echo "cp失败"
+            cp $i  ../../
+            cp $i  ../
+          done
+          # cp *.zip ${{ github.workspace }}/kernel_workspace || echo "cp失败"
       - name: 找zip
         run: |
           cd kernel_workspace
